--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,26 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Header from '../components/Header.astro';
+import FloatingAlert from '../components/FloatingAlert.astro';
+import Hero from '../components/Hero.astro';
+import FCVSAlert from '../components/FCVSAlert.astro';
+import StatsBar from '../components/StatsBar.astro';
+import HistoryCarousel from '../components/HistoryCarousel.astro';
+import WhyUs from '../components/WhyUs.astro';
+import FinalCTA from '../components/FinalCTA.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
-	<Welcome />
+  <Header />
+  <FloatingAlert />
+  <main>
+    <Hero />
+    <StatsBar />
+    <FCVSAlert />
+    <HistoryCarousel />
+    <WhyUs />
+    <FinalCTA />
+  </main>
+  <Footer />
 </Layout>
